--- a/server/Makefile
+++ b/server/Makefile
@@ -1,14 +1,12 @@
-# CFLAGS = -c -Wall
 CFLAGS = -c
-
 CC = gcc
-LIBS =  -lm 
+LIBS =  -lm	#For Math Library
 LIB = ../lib
 
 all: server
 
-server: server.o booking.o authen.o function.o
-	${CC} server.o booking.o authen.o function.o -o server
+server: server.o booking.o users.o function.o
+	${CC} server.o booking.o users.o function.o -o server
 
 booking.o: booking.c
 	${CC} ${CFLAGS} booking.c
@@ -16,12 +14,11 @@ booking.o: booking.c
 server.o: server.c
 	${CC} ${CFLAGS} server.c
 
-authen.o: authen.c
-	${CC} ${CFLAGS} authen.c
+users.o: users.c
+	${CC} ${CFLAGS} users.c
 
 function.o: ${LIB}/function.c
 	${CC} ${CFLAGS} ${LIB}/function.c
 
 clean:
 	rm -f *.o *~
-
